--- a/ramdisk/overlay/init.qcom.rc
+++ b/ramdisk/overlay/init.qcom.rc
@@ -24,7 +24,7 @@ on init
     write /sys/block/dm-2/queue/read_ahead_kb 2048
     
 on boot
-    
+   
 on post-fs
 
 on late-fs
@@ -75,8 +75,6 @@ on property:sys.boot_completed=1
     write /dev/stune/schedtune.boost 0
     write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
     write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
-    setprop sys.use_fifo_ui 1
-    setprop debug.composition.type c2d
     write /sys/class/kgsl/kgsl-3d0/force_no_nap 0
     write /sys/class/kgsl/kgsl-3d0/throttling 0
     write /sys/module/printk/parameters/console_suspend Y
@@ -91,6 +89,37 @@ on property:sys.boot_completed=1
     write /sys/block/dm-2/queue/read_ahead_kb 128
     write /sys/block/dm-3/queue/read_ahead_kb 128
     write /sys/class/thermal/thermal_message/sconfig "10"
+    write > /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq "825600"
+    write > /sys/devices/system/cpu/cpu5/cpufreq/scaling_min_freq "825600"
+    write > /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq "825600"
+    write > /sys/devices/system/cpu/cpu7/cpufreq/scaling_min_freq "825600"
+    write > /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq "300000"
+    write > /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq "300000"
+    write > /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq "300000"
+    write > /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq "300000"
+    write /d/tracing/tracing_on 0
+    write /d/tracing/events/ext4/enable 0
+    write /d/tracing/events/f2fs/enable 0
+    write /d/tracing/events/block/enable 0
+    setprop sys.use_fifo_ui 1
+    setprop persist.radio.add_power_save 1
+    setprop debug.composition.type c2d
+    setprop debug.mdpcomp.idletime 600
+    setprop persist.hwc.mdpcomp.enable true
+    setprop persist.hwc.ptor.enable true
+    setprop debug.enable.sglscale 1
+    setprop debug.sf.hw 1
+    setprop debug.hwui.renderer opengl
+    setprop debug.egl.hw 1
+    setprop debug.sf.disable_hwc 0
+    setprop debug.sf.recomputecrop 0
+    setprop debug.sf.disable_backpressure 1
+    setprop debug.sf.latch_unsignaled 1
+    setprop persist.hwc.mdpcomp.enable true
+    setprop persist.hwc.ptor.enable true
+    setprop debug.sf.gpu_comp_tiling 1
+    setprop debug.performance.tuning 1
+    setprop video.accelerate.hw 1
     
 on charger
     write /sys/devices/soc/${ro.boot.bootdevice}/clkscale_enable 1
