--- a/ramdisk/overlay/init.qcom.rc
+++ b/ramdisk/overlay/init.qcom.rc
@@ -137,6 +137,7 @@ on property:sys.boot_completed=1
     setprop persist.radio.add_power_save 1
     setprop debug.composition.type c2d
     setprop video.accelerate.hw 1
+    write > /proc/sys/net/ipv4/tcp_congestion_control "bbr"
     
 on charger
     write /sys/devices/soc/${ro.boot.bootdevice}/clkscale_enable 1
