--- a/ramdisk/overlay/init.qcom.rc
+++ b/ramdisk/overlay/init.qcom.rc
@@ -155,15 +155,15 @@ on property:sys.boot_completed=1
   setprop net.tcp.buffersize.lte 524288,1048576,2097152,524288,1048576,2097152
   setprop net.tcp.buffersize.hsdpa 6144,87380,1048576,6144,87380,1048576
   setprop net.tcp.buffersize.evdo_b 6144,87380,1048576,6144,87380,1048576
-  setprop MIN_HIDDEN_APPS false
-  setprop ACTIVITY_INACTIVE_RESET_TIME false
-  setprop MIN_RECENT_TASKS false
-  setprop PROC_START_TIMEOUT false
-  setprop CPU_MIN_CHECK_DURATION false
-  setprop GC_TIMEOUT false
-  setprop SERVICE_TIMEOUT false
-  setprop MIN_CRASH_INTERVAL false
-  setprop ENFORCE_PROCESS_LIMIT false
+  #setprop MIN_HIDDEN_APPS false
+  #setprop ACTIVITY_INACTIVE_RESET_TIME false
+  #setprop MIN_RECENT_TASKS false
+  #setprop PROC_START_TIMEOUT false
+  #setprop CPU_MIN_CHECK_DURATION false
+  #setprop GC_TIMEOUT false
+  #setprop SERVICE_TIMEOUT false
+  #setprop MIN_CRASH_INTERVAL false
+  #setprop ENFORCE_PROCESS_LIMIT false
   write /proc/sys/fs/leases-enable "1"
   write /proc/sys/fs/lease-break-time "20"
   write /proc/sys/vm/overcommit_ratio "0"
@@ -173,11 +173,7 @@ on property:sys.boot_completed=1
   write /sys/class/kgsl/kgsl-3d0/force_clk_on "1"
   write /sys/class/kgsl/kgsl-3d0/force_rail_on "0"
   write /sys/class/kgsl/kgsl-3d0/throttling "0"
-  write /sys/class/kgsl/kgsl-3d0/max_pwrlvl "0"
-  write /sys/class/kgsl/kgsl-3d0/throttling "0"
-  write /sys/class/kgsl/kgsl-3d0/force_clk_on_enabled "1"
-  write /sys/class/kgsl/kgsl-3d0/force_rail_on_enabled "1"
-  write /sys/class/kgsl/kgsl-3d0/force_no_nap "1"
+  write /sys/class/kgsl/kgsl-3d0/force_no_nap "0"
   write /sys/kernel/mm/ksm/run "0"
   write /sys/power/pm_freeze_timeout "5000"
   write /sys/module/lpm_levels/parameters/lpm_prediction "Y"
