--- a/ramdisk/overlay/init.qcom.rc
+++ b/ramdisk/overlay/init.qcom.rc
@@ -140,12 +140,12 @@ on property:sys.boot_completed=1
   write /d/tracing/events/block/enable 0
   setprop sys.use_fifo_ui 1
   setprop persist.radio.add_power_save 1
-  setprop debug.composition.type c2d
+  #setprop debug.composition.type c2d
   setprop video.accelerate.hw 1
-  setprop persist.sys.ui.hw 1
-  setprop debug.egl.buffcount 4
-  setprop debug.egl.hw 1
-  setprop debug.hwui.renderer skiagl
+  #setprop persist.sys.ui.hw 1
+  #setprop debug.egl.buffcount 4
+  #setprop debug.egl.hw 1
+  #setprop debug.hwui.renderer skiagl
   setprop net.tcp.buffersize.default 6144,87380,1048576,6144,87380,524288
   setprop net.tcp.buffersize.wifi 524288,1048576,2097152,524288,1048576,2097152
   setprop net.tcp.buffersize.umts 6144,87380,1048576,6144,87380,524288
