--- a/ramdisk/overlay/init.qcom.rc
+++ b/ramdisk/overlay/init.qcom.rc
@@ -145,7 +145,7 @@ on property:sys.boot_completed=1
   #setprop persist.sys.ui.hw 1
   #setprop debug.egl.buffcount 4
   #setprop debug.egl.hw 1
-  #setprop debug.hwui.renderer skiagl
+  setprop debug.hwui.renderer vulkan
   setprop net.tcp.buffersize.default 6144,87380,1048576,6144,87380,524288
   setprop net.tcp.buffersize.wifi 524288,1048576,2097152,524288,1048576,2097152
   setprop net.tcp.buffersize.umts 6144,87380,1048576,6144,87380,524288
